--- a/package.json
+++ b/package.json
@@ -14,13 +14,11 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.18.0",
-    "styled-components": "^6.1.1",
-    "vite-jsconfig-paths": "^2.0.1",
-    "vite-tsconfig-paths": "^4.2.1"
+    "styled-components": "^6.1.1"
   },
   "devDependencies": {
-    "@types/react": "^18.2.39",
-    "@types/react-dom": "^18.2.17",
+    "@types/react": "^18.2.53",
+    "@types/react-dom": "^18.2.18",
     "@typescript-eslint/eslint-plugin": "^6.13.1",
     "@typescript-eslint/parser": "^6.13.1",
     "@vitejs/plugin-react": "^4.0.3",
@@ -28,7 +26,9 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
-    "typescript": "^5.3.2",
-    "vite": "^4.4.5"
+    "typescript": "^5.3.3",
+    "typescript-plugin-css-modules": "^5.0.2",
+    "vite": "^4.4.5",
+    "vite-tsconfig-paths": "^4.3.1"
   }
 }
